# fenicsx-pulse

./: .bumpversion.cfg  .cspell_dict.txt  .flake8  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  conf.py  cspell.config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: build_docs.yml  codspeed.yml  deploy_docs.yml  docker-image.yml  pre-commit.yml  pypi.yml  test_package_coverage.yml
demo/: 0D_circulation.py  biv_ellipsoid.py  bleeding_biv.py  cylinder.py  cylinder_ciculation.py  inverse_material.py  lv_ellipsoid.py  lv_ellipsoid_fixed_x.py  maths.py  postprocess_cycle.md  prestress.py  prestress_biv.py  prestress_fixedpoint_unloader.py  stress_strain.py  time_dependent.py  time_dependent_bestel_biv.py  time_dependent_bestel_lv.py  time_dependent_land_circ_biv.py  time_dependent_land_circ_lv.py  unit_cube.ipynb  unit_cube.py
demo/benchmark/: README.md  problem1.py  problem2.py  problem3.py
demo/boundary_conditions/: README.md  lv_ellipsoid_fixed_x.py  ukb_bcs.py
demo/geometries/: README.md  biv_ellipsoid.py  cylinder.py  lv_ellipsoid.py  ukb_mesh.py  unit_cube.py
demo/prestress/: README.md  prestress_biv.py  prestress_fixedpoint_unloader.py
demo/time_dependent/: README.md  TorOrdLand.ode  complete_cycle.py  frank_starling_twitch.py  time_dependent_bestel_biv.py  time_dependent_bestel_lv.py  time_dependent_land_circ_biv.py  time_dependent_land_circ_lv.py
docker/: Dockerfile
docs/: api.rst  refs.bib
src/fenicsx_pulse/: __init__.py  active_model.py  active_stress.py  boundary_conditions.py  cardiac_model.py  cli.py  compressibility.py  exceptions.py  functions.py  geometry.py  holzapfelogden.py  invariants.py  linear_elastic.py  material_model.py  mechanicsproblem.py  problem.py  static_problem.py  temporalmechanicsproblem.py  units.py  utils.py  viscoelasticity.py
src/fenicsx_pulse/material_models/: __init__.py  guccione.py  holzapfelogden.py  linear_elastic.py  neo_hookean.py  saint_venant_kirchhoff.py
src/pulse/: __init__.py  active_model.py  active_stress.py  boundary_conditions.py  cardiac_model.py  cli.py  compressibility.py  exceptions.py  fixed_point_unloader.py  geometry.py  invariants.py  kinematics.py  material_model.py  prestress.py  problem.py  units.py  unloading.py  utils.py  viscoelasticity.py
src/pulse/material_models/: __init__.py  guccione.py  holzapfelogden.py  neo_hookean.py  saint_venant_kirchhoff.py  usyk.py
src/pulsex/: __init__.py  _types.py  active_model.py  active_stress.py  cardiac_model.py  compressibility.py  exceptions.py  functions.py  geometry.py  holzapfelogden.py  kinematics.py  linear_elastic.py  material_model.py  mechanicsproblem.py
tests/: conftest.py  test_active_model.py  test_benchmarks.py  test_cardiac_model.py  test_cli.py  test_compressibility.py  test_geometry.py  test_invariants.py  test_kinematics.py  test_material_models.py  test_mechanicsproblem.py  test_static_problem.py  test_static_problem_Holzapfel.py  test_units.py  test_utils.py  test_version.py  utils.py
