[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "fenicsx-pulse"
version = "0.1.1"
description = "Next generation cardiac mechanics solver based on FEniCSx"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = ["fenics-dolfinx"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
docs = [
   "jupyter-book",
   "jupytext",
   "ipython<8.7.0"
]

all = [
   "fenicsx_pulse[test]",
   "fenicsx_pulse[docs]",
   "fenicsx_pulse[dev]",
]

[tool.pytest.ini_options]
addopts = [
   "--cov=fenicsx_pulse",
   "--cov-report=html",
   "--cov-report=xml",
   "--cov-report=term-missing",
   "-v"
]
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "def __str__"
]
